fixed 404 error, there was a mispelling and did the css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
+        <h2>Criminals</h2>
         <article class="criminalsContainer">
-            <div class="criminal">
-
-            </div>
+            <section class="criminalList">
+            
+            </section>
+        </article>
+        <h2>Officers</h2>
+        <article class="officersContainer">
+            <section class="officerList">
+            
+            </section>
         </article>
     </main>
 
