--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <header>
             <div class="filters">
                 <div class="filter filters__crime"></div>
+                    <select class="dropdown" id="crimeSelect">
+
+                    </select>
                 <div class="filter filters__incarceration"></div>
                 <div class="filter filters__officer"></div>
             </div>
