--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
+        <h2>Notes</h2>
+        <article class="noteFormContainer"></article>
         <h2>Criminals</h2>
         <article class="criminalsContainer">
             <section class="criminalList">
