--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
                 <div class="filter filters__crime"></div>
                 <div class="filter filters__incarceration"></div>
                 <div class="filter filters__officer"></div>
+                <div class="filter filters__witness"></div>
             </div>
         </header>
         <h2>Notes</h2>
         <article class="noteFormContainer"></article>
-            <section class="noteForm">
-            
+            <section class="noteForm">        
+                  
             </section>
         <h2>Criminals</h2>
+        <section class="witnessList">
+
+        </section>
         <article class="criminalsContainer">
             <section class="criminalList">
+
             </section>
+        </article>
         <h2>Officers</h2>
         <article class="officersContainer">
             <section class="officerList">
